[metadata]
name = pytest-report-api
url = https://github.com/fridex/pytest-report-api
author = Fridolin Pokorny
author_email = fridex.devel@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = LGPLv3
description = Pytest plugin for submitting pytest results to an API
long_description = file: README.rst
keywords = pytest, py.test, api, testing

[options]
zip_safe = False
py_modules = pytest_report_api
python_requires = >=3.6
install_requires =
    pytest
    requests

[options.entry_points]
pytest11 =
    pytest_report_api = pytest_report_api
